--- a/web-frontend/src/app-style.scss
+++ b/web-frontend/src/app-style.scss
@@ -1,4 +1,4 @@
-$max-width: 1200px;
+$max-width: 80em;
 
 * {
   margin: 0;
@@ -22,20 +22,32 @@ $max-width: 1200px;
   margin: 0 auto;
   max-width: $max-width;
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-areas:
+    "task"
+    "progress"
+    "info";
   height: 400px;
   clear: both;
 }
 
-.app-body-left-sidebar {
+@media (min-width: 50em) {
+  .app-body {
+    grid-template-areas: "info task task task progress";
+  }
+}
+
+.deck-info {
+  grid-area: info;
   background-color: lemonchiffon;
 }
 
-.app-body-center {
+.deck-task {
+  grid-area: task;
   background-color: lightblue;
 }
 
-.app-body-right-sidebar {
+.deck-progress {
+  grid-area: progress;
   background-color: moccasin;
 }
 
